refactor: add username to member checkbox

--- a/src/app/application/dialog/addMember.dialog.html
+++ b/src/app/application/dialog/addMember.dialog.html
@@ -56,7 +56,10 @@
 							value="{{user.id}}" 
 							aria-label="{{user.id}}" 
 							ng-click="selectMember(user)">
-				      {{ user.lastname }}
+				      <span>
+								{{user.id}}
+          		  <span ng-show="user.lastname">( {{user.lastname}} )</span>
+          		</span>
 				    </md-checkbox>
 					</span>
 				</div>
