Add users management in API

--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -38,6 +38,8 @@
         </md-tab>
         <md-tab label="analytics" ui-sref="apis.admin.analytics">
         </md-tab>
+        <md-tab label="members" ui-sref="apis.admin.members">
+        </md-tab>
       </md-tabs>
       <div ui-view flex></div>
     </md-card-content>
