--- a/src/app/api/dialog/api.dialog.html
+++ b/src/app/api/dialog/api.dialog.html
@@ -20,9 +20,9 @@
     <form name="formApi" ng-submit="dialogApiCtrl.save()" novalidate>
       <md-toolbar>
         <div class="md-toolbar-tools">
-          <h2>Creation of a new API'</h2>
+          <h2>Creation of a new API</h2>
           <span flex></span>
-          <md-button class="md-icon-button" ng-click="hide()">
+          <md-button type="button" class="md-icon-button" ng-click="dialogApiCtrl.hide()">
             X
           </md-button>
         </div>
