--- a/src/app/api/admin/apiAdmin.html
+++ b/src/app/api/admin/apiAdmin.html
@@ -16,10 +16,8 @@
 
 -->
 <section class="content-header">
-  <div layout="row">
-    <md-button class="md-fab md-mini md-primary" ng-click="apiCtrl.backToPreviousState()" aria-label="List of APIs">
-      <ng-md-icon icon="menu"></ng-md-icon>
-    </md-button>
+  <div layout="row" layout-align="start center" layout-padding>
+    <ng-md-icon ng-click="apiCtrl.backToPreviousState()" icon="menu"></ng-md-icon>
 
     <h1>
       {{apiCtrl.api.name}}
