refactor: fix display of APIs on home

--- a/src/app/api/admin/documentation/page/apiPage.html
+++ b/src/app/api/admin/documentation/page/apiPage.html
@@ -40,7 +40,7 @@
                     disable-title disable-theme-switcher disable-raml-client-generator>
       </raml-console>
 
-      <div ng-if="pageCtrl.swaggerType()" swagger-ui url="pageCtrl.getContentUrl()" api-explorer="true" validator-url="false">
+      <div ng-if="pageCtrl.swaggerType()" swagger-ui url="pageCtrl.getContentUrl()" api-explorer="false" validator-url="false">
       </div>
     </div>
 
