--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<md-card ng-init="apisCtrl.list()">
+<md-card>
   <md-card-content class="content-header">
 
     <div layout="row" layout-align="end center" layout-padding>
