--- a/src/app/api/apisTableMode.html
+++ b/src/app/api/apisTableMode.html
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<md-data-table-container>
+<md-data-table-container ng-init="apisCtrl.list()">
 	<table md-data-table>
 		<thead md-order="order">
 		<tr>
