--- a/src/app/application/details/application.scss
+++ b/src/app/application/details/application.scss
@@ -4,6 +4,10 @@
 	margin-bottom: 30px;
 }
 
+.application-data-table {
+	margin-top: 20px;
+}
+
 .application-general-container > h3 {
 	background-color: #F5F5F5;
 	margin: 0px;
