--- a/src/app/api/apisList.html
+++ b/src/app/api/apisList.html
@@ -15,24 +15,31 @@
     limitations under the License.
 
 -->
+<section class="content-header">
+  <h1>
+   Gravitee
+   <small>APIs Management</small>
+	</h1>
+</section>  
+
 <md-card>
-  <md-card-content class="content-header">
-
-    <div layout="row" layout-align="end center" layout-padding>
-      <ng-md-icon ng-class="{'gravitee-disabled': !apisCtrl.tableMode}"
-                  icon="view_list" ng-click="apisCtrl.changeMode(true)">
-      </ng-md-icon>
-
-      <ng-md-icon ng-class="{'gravitee-disabled': apisCtrl.tableMode}"
-                  icon="view_module" ng-click="apisCtrl.changeMode(false)">
-      </ng-md-icon>
-    </div>
-
-    <div ui-view style="margin-bottom: 100px;"></div>
-
-    <md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apisCtrl.showApiModal()">
-      <ng-md-icon icon="add"></ng-md-icon>
-    </md-button>
-
+	<div layout="row" layout-align="end center" layout-padding>
+		<span class="btn-group">
+			<button ng-class="{'active': !apisCtrl.tableMode}" class="btn btn-default" 
+							ng-click="apisCtrl.changeMode(false)" type="button">
+				<ng-md-icon icon="apps"></ng-md-icon>
+			</button>
+			<button ng-class="{'active': apisCtrl.tableMode}" class="btn btn-default" 
+							ng-click="apisCtrl.changeMode(true)" type="button">
+				<ng-md-icon icon="list"></ng-md-icon>
+			</button>
+		</span>
+	</div>
+  <md-card-content>
+    <div ui-view></div>
   </md-card-content>
 </md-card>
+
+<md-button class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="apisCtrl.showApiModal()">
+  <ng-md-icon icon="add"></ng-md-icon>
+</md-button>
